<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="record_label_breakfast">Breakfast</string>
    <string name="record_label_lunch">Lunch</string>
    <string name="record_label_dinner">Dinner</string>
    <string name="record_label_hotel">Hotel</string>
    <string name="record_label_car_rental">"Car Rental"</string>
    <string name="record_label_gasoline">Gasoline</string>
    <string name="record_label_ticket">Ticket</string>
    <string name="record_label_toll">Toll</string>
    <string name="title_share_tally">"Share Tally"</string>
    <string name="title_create_tally">"Create Tally"</string>
    <string name="title_edit_tally">"Edit Tally"</string>
    <string name="title_add_record">"Add Record"</string>
    <string name="title_edit_record">"Edit Record"</string>
    <string name="title_friends">Friends</string>
    <string name="title_add_friend">"Add a Friend"</string>
    <string name="title_edit_friend">"Edit a Friend"</string>
    <string name="warning_delete_friend">"This friend will be deleted.\nHe will still appear on the tallies as a participant."</string>
    <string name="warning_delete_tally">"The tally and all records belonging to it will be deleted."</string>
    <string name="app_name">ShareTally</string>
    <string name="hello_world">Hello world!@!!!</string>
    <string name="action_settings">Settings</string>
    <string name="action_new">New</string>
    <string name="action_friend">Friend</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="title_activity_tally_list">Tally, Friend</string>
    <string name="title_activity_tally_edit">TallyEditActivity</string>
    <string name="title_activity_friend_list">FriendListActivity</string>
    <string name="title_activity_friend_edit">FriendEditActivity</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="done">Done</string>
    <string name="title_activity_record_list">RecordListActivity</string>
    <string name="title_activity_record_edit">RecordEditActivity</string>
    <string name="label">Label</string>
    <string name="labels">Labels</string>
    <string name="amount">Amount</string>
    <string name="lbPrivate">Private</string>
    <string name="participants">Participants</string>
    <string name="all_equal">"All Equal"</string>
    <string name="payer">Payer</string>
    <string name="save_and_new">"Save and New"</string>
    <string name="calculate">Calculate</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="date">Date</string>
    <string name="applied_to">Applied To</string>
    <string name="prompt_already_paid">"Already paid:"</string>
    <string name="prompt_to_pay">"Need to pay:"</string>
    <string name="help">Help</string>
    <string name="currency">Currency</string>
    <string name="action_login">Login</string>
    <string name="myself">Myself</string>
    <string name="discard">Discard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_manage_friend">Manage Friends</string>
    <string name="place">Place</string>
    <string name="no_record">No Record</string>
    <string name="receipt">Receipt</string>
    <string name="cancel">Cancel</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose fom Gallery</string>
    <string name="add_receipt">Add Receipt</string>
    <string name="change">Change</string>
    <string name="share">Share</string>
    <string name="action_import">"Import from Contacts"</string>

    <string-array name="tally_action">
        <item>@string/edit</item>
        <item>@string/delete</item>
    </string-array>
    <string-array name="image_choose_action">
        <item>@string/take_photo</item>
        <item>@string/choose_from_gallery</item>
        <item>@string/cancel</item>
    </string-array>

    <string name="title_activity_contact_selection">ContactSelectionActivity</string>
    <string name="sync">Sync</string>

</resources>
