<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.qingy.tallyfriend.RecordListActivity">

    <item android:id="@+id/action_calculate"
        android:title="@string/calculate"
        android:icon="@drawable/icon_calculator"
        android:showAsAction="always" />

    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_action_edit"
        android:showAsAction="ifRoom"
        android:title="@string/edit" />

    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always"
        android:title="@string/action_new" />

    <item
        android:id="@+id/action_delete"
        android:showAsAction="never"
        android:title="@string/delete" />
</menu>
