<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/tally_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:inputType="text" />

    <EditText
        android:id="@+id/tally_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:lines="2"
        android:scrollbars="vertical" />

    <EditText
        android:id="@+id/tally_place"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/place"
        android:inputType="text" />
</LinearLayout>