<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.qingy.sharetally.FriendEditActivity">

    <EditText
        android:id="@+id/person_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/person_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btn_save_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_and_new"/>

</LinearLayout>
