<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.qingy.tallyfriend.RecordEditActivity">

    <EditText
        android:id="@+id/label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label"
        android:inputType="text" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        android:inputType="numberDecimal" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckedTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbPrivate" />

</LinearLayout>
